Added bluetooth check functions

--- a/demo/src/app/home/home.component.html
+++ b/demo/src/app/home/home.component.html
@@ -9,5 +9,6 @@
     <Button class="btn" row="2" col="0" text="Print text sample" (tap)="printText()"></Button>
     <Button class="btn" row="3" col="0" text="Print product label" (tap)="printProductLabel()"></Button>
     <Button class="btn" row="4" col="0" text="Print service label" (tap)="printServiceLabel()"></Button>
+    <Button class="btn" row="5" col="0" text="Print client label" (tap)="printClientLabel()"></Button>
     <Label class="lbl" row="7" text="{{result}}" ></Label>
 </GridLayout>
